# mind-game

./: .gitignore  CLAUDE.md  INTEGRATION_GUIDE.md  Schulte_Table_App_Basic_Design.md  schulte-architecture-explorer.html
backend/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  leaderboards.py  router.py  sessions.py  users.py
backend/app/core/: database.py  exceptions.py  security.py
backend/app/models/: __init__.py  leaderboard.py  session.py  user.py
backend/app/repositories/: leaderboard.py  session.py  user.py
backend/app/schemas/: auth.py  common.py  leaderboard.py  session.py  user.py
backend/app/services/: auth.py  leaderboard.py  session.py  stats.py
backend/tests/: conftest.py  test_auth.py  test_leaderboards.py  test_sessions.py  test_users.py
docs/: backend-design.md  frontend-design.md  infrastructure-design.md  request-flow.md
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: game-controls.tsx  game-stats.tsx  result-card.tsx  schulte-grid.tsx  timer-display.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: use-auth.ts  use-language.ts  use-settings.ts  use-sync.ts  use-timer.ts
infrastructure/: DEPLOYED_RESOURCES.md
infrastructure/awsenv/: .gitignore
infrastructure/scripts/: deploy.sh  user-data.sh
(+57 files in other folders)
